# xlayer-reth

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .reth-dev.toml  CLAUDE.md  Cargo.toml  Dockerfile  DockerfileOp  DockerfileTools  JIT-BENCH-HANDOFF.md  Makefile  README.md  justfile  nextest.toml  run-bench-aot.sh  run-bench-fb.sh  run-fb.sh  run-paid-Nx3-fb.sh  run-paid-Nx3.sh  run.sh  rustfmt.toml  setup-golden.sh
.claude/skills/: commit.md  review.md
.claude/skills/autopilot/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.config/: nextest.toml
.github/: pull_request_template.md
.github/scripts/: pre-commit-xlayer
.github/workflows/: claude.yml  security-dependabot-fix.yml
.okone-cicd/dockerfile/: Dockerfile  Dockerfile.in
bench-data/: bench-opstack-genesis-nojovian.json  bench-opstack-genesis.json
context-kg/: README.md
context-kg/business/: README.md
context-kg/plan/: IMPL-per-ip-ws-rate-limit.md
context-kg/quality/: README.md
context-kg/technical/: README.md  knowledge-base.md  terminology.md
context-kg/technical/apis/: error-codes.md  rpc-api-conventions.md
context-kg/technical/arch/: architecture-overview.md  dependency.md
context-kg/technical/conventions/: common-tools.md  feature-types.md  service-patterns.md
context-kg/technical/core-flows/: block-building-flow.md  bridge-intercept-flow.md  (+2 more)
contracts/eip8130/: .gitignore  README.md  foundry.toml
crates/blacklist/: Cargo.toml
crates/blacklist-node/: Cargo.toml
crates/blacklist-node/src/: balance.rs  deposit_apply.rs  evm_config.rs  executor_builder.rs  follower_hook.rs  inspector.rs  lib.rs  pool_builder.rs  runtime.rs  validator.rs  view.rs
crates/blacklist/src/: abi.rs  deposit.rs  error.rs  eval.rs  inspector.rs  lib.rs  metrics.rs  mirror.rs  rules.rs  runtime.rs  snapshot.rs
crates/builder/: Cargo.toml  build.rs
crates/builder-p2p/: Cargo.toml
crates/chainspec/: Cargo.toml
crates/eip8130-consensus/: Cargo.toml
crates/eip8130-consensus/src/: abi.rs  accessors.rs  address.rs  constants.rs  execution.rs  gas.rs  lib.rs  native_verifier.rs  precompiles.rs  predeploys.rs  purity.rs  signature.rs  storage.rs  system_bytecodes.rs  tx.rs  types.rs  validation.rs  verifier.rs
crates/eip8130-pool/: Cargo.toml
crates/eip8130-pool/src/: handle.rs  invalidation.rs  lib.rs  merged.rs  pool.rs  test_utils.rs  transaction.rs  validate.rs
crates/eip8130-revm/: Cargo.toml
crates/eip8130-revm/src/: constants.rs  eip8130_parts.rs  eip8130_policy.rs  handler.rs  lib.rs  precompiles.rs  tx_context.rs
crates/engine-api/: Cargo.toml
crates/evm/: Cargo.toml  readme.md
crates/evm/src/: config.rs  evm_factory.rs  factory.rs  lib.rs
crates/evm/src/precompiles/: mod.rs  poseidon.rs
crates/export/: Cargo.toml
crates/flashblocks/: Cargo.toml
crates/flashblocks/src/: cache.rs  debug.rs  handler.rs  innertx.rs  lib.rs  persist.rs  pubsub.rs  service.rs  state.rs  subscription.rs  test_utils.rs
crates/flashblocks/src/cache/: block.rs  confirm.rs  factory.rs  header.rs  id.rs  mod.rs  pending.rs  raw.rs  receipt.rs  state.rs  task.rs  transaction.rs  utils.rs
crates/flashblocks/src/cache/state/: block.rs  factory.rs  header.rs  id.rs  mod.rs  receipt.rs  transaction.rs  utils.rs
crates/flashblocks/src/execution/: assemble.rs  cache.rs  engine.rs  mod.rs  processor.rs  validator.rs  worker.rs
crates/flashblocks/src/subscription/: mod.rs  pubsub.rs  rpc.rs
crates/flashblocks/src/types/: mod.rs  sequence.rs
crates/flashblocks/src/ws/: decoding.rs  frame.rs  mod.rs  stream.rs
crates/full-trace/: Cargo.toml
crates/full-trace/src/: blockchain_tracer.rs  engine_api_tracer.rs  lib.rs  rpc_tracer.rs  tracer.rs
crates/import/: Cargo.toml
crates/innertx/: Cargo.toml
crates/innertx/src/: cache.rs  cache_utils.rs  db_utils.rs  innertx_inspector.rs  innertx_inspector_tests.rs  lib.rs  replay_utils.rs  rpc_utils.rs  structs.rs  subscriber_utils.rs
crates/intercept/: Cargo.toml
crates/intercept/src/: lib.rs
crates/legacy-rpc/: Cargo.toml
crates/legacy-rpc/src/: conditions.rs  get_logs.rs  layer.rs  lib.rs  multi_address_middleware.rs  service.rs
crates/monitor/: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: args.rs  args_xlayer.rs  launcher.rs  lib.rs  main.rs  node.rs  payload_builder.rs  types.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: aa.rs  default.rs  eth.rs  eth_innertx.rs  filter.rs  flashblocks.rs  helper.rs  lib.rs  pre_exec_ext_xlayer.rs  pre_exec_types.rs  xlayer_ext.rs
crates/rpc/src/aa/: mod.rs  pool.rs  receipt.rs  verifiers.rs
crates/tests/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  version.rs
crates/version/: Cargo.toml  build.rs
crates/xlayer-consensus/: Cargo.toml
crates/xlayer-consensus/src/: envelope.rs  lib.rs  pooled.rs
crates/xlayer-consensus/src/aa/: address.rs  build.rs  constants.rs  encoding.rs  gas_schedule.rs  mod.rs  native.rs  signature.rs  tx.rs  types.rs  verifier.rs
crates/xlayer-revm/: Cargo.toml
crates/xlayer-revm/src/: constants.rs  evm.rs  factory.rs  handler.rs  lib.rs  policy.rs  precompiles.rs  transaction.rs  tx_env.rs
crates/xlayer-revm/src/handler/: helpers.rs  tests.rs
crates/xlayer-rpc-types/: Cargo.toml
crates/xlayer-rpc-types/src/: lib.rs  receipt.rs
crates/xlayer-txpool/: Cargo.toml
crates/xlayer-txpool/src/: lib.rs  transaction.rs  validator.rs
docs/: BUILDING_ON_RETH.md  NATIVE_AA_ACTION.md  NATIVE_AA_DEFERRED.md  NATIVE_AA_DESIGN.md  NATIVE_AA_SUMMARY.md  TRIE_CACHE_BENCHMARK_REPORT.md  xlayer-aa.md
docs/subguides/: CHAINSPEC_EVM_GUIDE.md  DATABASE_GUIDE.md  ENGINE_CONSENSUS_GUIDE.md  EXTENSION_GUIDE.md  NODE_BUILDER_GUIDE.md  PAYLOAD_BUILDER_GUIDE.md
documentation/: README.md  bin-node-architecture.md
patches/ratatui/: Cargo.toml
scripts/: parse-bench-timing.py
scripts/aa/: README.md  package-lock.json  package.json  send_k1_eoa_tx.ts  tsconfig.json
scripts/tests/: test_parser.py
tests/: README.md  prepare-test-import-export-testnet.sh  test-export-import.sh  test-import-export-testnet.sh  test-precompile.sh
(+205 files in other folders)
