[workspace.package]
version = "0.0.6"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/okx/xlayer-reth.git"
repository = "https://github.com/okx/xlayer-reth.git"

# ==============================================================================
# Workspace Configuration
# ==============================================================================

[workspace]
resolver = "2"
exclude = ["deps"]
members = [
    "crates/builder",
    "crates/chainspec",
    "crates/flashblocks",
    "crates/intercept",
    "crates/legacy-rpc",
    "crates/monitor",
    "crates/rpc",
    "crates/tests",
    "crates/version",
    "crates/builder/src/tests/framework/macros",

    "bin/tools",
    "bin/node",
]
default-members = ["bin/node"]

[workspace.lints]

# ==============================================================================
# Build Profiles
# ==============================================================================

# Mimics reth release profile
[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# ==============================================================================
# Workspace Dependencies
# ==============================================================================

[workspace.dependencies]

# ==============================================================================
# Internal Dependencies
# ==============================================================================

xlayer-bridge-intercept = { path = "crates/intercept" }
xlayer-builder = { path = "crates/builder" }
xlayer-chainspec = { path = "crates/chainspec" }
xlayer-flashblocks = { path = "crates/flashblocks" }
xlayer-legacy-rpc = { path = "crates/legacy-rpc" }
xlayer-monitor = { path = "crates/monitor" }
xlayer-reth-node = { path = "bin/node" }
xlayer-rpc = { path = "crates/rpc" }
xlayer-version = { path = "crates/version" }

# For X Layer
xlayer-trace-monitor = { git = "https://github.com/okx/xlayer-toolkit", rev = "d6af8edac7cf179241af1688f7741e260ba48b79" }

# ==============================================================================
# Reth Base Dependencies (paradigmxyz/reth v2.1.0)
# These are chain-agnostic crates from the base reth framework.
# https://github.com/okx/reth/tree/upstream/dev-v2.1.0
# ==============================================================================
reth = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-basic-payload-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-chain-state = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-chainspec = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-cli = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-cli-commands = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-cli-util = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-db = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-db-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-db-models = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-engine-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-engine-tree = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-errors = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-ethereum-forks = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-evm = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-exex = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-execution-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-ipc = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-metrics = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-network-peers = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-node-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-core = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-builder-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-util = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-primitives-traits = { version = "0.3.0", default-features = false }
reth-provider = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-revm = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-rpc = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-convert = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-engine-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-eth-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-eth-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-rpc-layer = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-server-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-static-file-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-storage-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-tasks = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-testing-utils = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-tokio-util = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-tracing = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-tracing-otlp = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-transaction-pool = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-trie = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-trie-common = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd", default-features = false }
reth-trie-db = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-trie-parallel = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }

# xlayer tools
reth-codecs = { version = "0.3.0", default-features = false, features = [
  "alloy",
] }
reth-stages-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-static-file = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-prune-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }

# ==============================================================================
# Reth Optimism Dependencies (from local optimism/rust op-reth)
# These are OP-chain-specific crates, sourced from the optimism monorepo.
# ==============================================================================
reth-optimism-chainspec = { path = "deps/optimism/rust/op-reth/crates/chainspec/", default-features = false }
reth-optimism-cli = { path = "deps/optimism/rust/op-reth/crates/cli/", default-features = false }
reth-optimism-consensus = { path = "deps/optimism/rust/op-reth/crates/consensus/", default-features = false }
reth-optimism-evm = { path = "deps/optimism/rust/op-reth/crates/evm/", default-features = false, features = ["rpc"] }
reth-optimism-flashblocks = { path = "deps/optimism/rust/op-reth/crates/flashblocks/" }
reth-optimism-forks = { path = "deps/optimism/rust/op-reth/crates/hardforks/", default-features = false }
reth-optimism-node = { path = "deps/optimism/rust/op-reth/crates/node/" }
reth-optimism-payload-builder = { path = "deps/optimism/rust/op-reth/crates/payload/" }
reth-optimism-primitives = { path = "deps/optimism/rust/op-reth/crates/primitives/", default-features = false }
reth-optimism-rpc = { path = "deps/optimism/rust/op-reth/crates/rpc/" }
reth-optimism-storage = { path = "deps/optimism/rust/op-reth/crates/storage/" }
reth-optimism-txpool = { path = "deps/optimism/rust/op-reth/crates/txpool/" }

# ==============================================================================
# Revm Dependencies (aligned with reth v2.1.0)
# ==============================================================================
revm = { version = "38.0.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }

# op-revm (from local optimism/rust, with version for compat)
op-revm = { version = "19.0.0", path = "deps/optimism/rust/op-revm/", default-features = false }

# ==============================================================================
# revmc JIT (paradigmxyz/revmc upstream main, no private patches).
# The revmc fork is on the `xlayer/upstream-only` branch which tracks
# `paradigmxyz/revmc origin/main` 1:1.
# ==============================================================================
revmc          = { version = "0.1.0", default-features = false }
revmc-runtime  = { version = "0.1.0", default-features = false }
revmc-context  = { version = "0.1.0", default-features = false }

# ==============================================================================
# Alloy Dependencies (pinned to exact versions used by reth v2.1.0)
# Note: reth v2.1.0 still pins alloy-primitives + alloy-sol-types to 1.5.6 even
# though the higher-level alloy crates moved to 2.0.0.
# ==============================================================================
alloy-chains = { version = "0.2.33", default-features = false }
alloy-contract = { version = "2.0.0" }
alloy-consensus = { version = "2.0.0", default-features = false }
alloy-eips = { version = "2.0.0", default-features = false }
alloy-eip7928 = { version = "0.3.0", default-features = false }
alloy-evm = { version = "0.33.0", default-features = false }
alloy-genesis = { version = "2.0.0", default-features = false }
alloy-json-rpc = { version = "2.0.0" }
alloy-network = { version = "2.0.0", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
    "map-foldhash",
] }
alloy-provider = { version = "2.0.0" }
alloy-rlp = { version = "0.3.13", default-features = false, features = [
    "core-net",
] }
alloy-rpc-client = { version = "2.0.0" }
alloy-rpc-types-beacon = { version = "2.0.0", features = ["ssz"] }
alloy-rpc-types-engine = { version = "2.0.0", default-features = false }
alloy-rpc-types-eth = { version = "2.0.0" }
alloy-serde = { version = "2.0.0" }
alloy-signer-local = { version = "2.0.0", default-features = false }
alloy-sol-types = { version = "1.5.6", default-features = false }
alloy-transport-http = { version = "2.0.0", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport = { version = "2.0.0" }
alloy-hardforks = { version = "0.4.7", default-features = false }

# op-alloy (from local optimism/rust, with version for compat)
alloy-op-evm = { version = "0.31.0", path = "deps/optimism/rust/alloy-op-evm/", default-features = false }
alloy-op-hardforks = { version = "0.4.7", path = "deps/optimism/rust/alloy-op-hardforks/", default-features = false }
op-alloy-consensus = { version = "0.24.0", path = "deps/optimism/rust/op-alloy/crates/consensus", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }
op-alloy-network = { version = "0.24.0", path = "deps/optimism/rust/op-alloy/crates/network", default-features = false }
op-alloy-rpc-types = { version = "0.24.0", path = "deps/optimism/rust/op-alloy/crates/rpc-types", default-features = false }
op-alloy-rpc-types-engine = { version = "0.24.0", path = "deps/optimism/rust/op-alloy/crates/rpc-types-engine", default-features = false }

# ==============================================================================
# Support Dependencies
# ==============================================================================
tokio = { version = "1.51.1", features = ["full"] }
tokio-metrics = { version = "0.4.7" }
tokio-stream = "0.1.11"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
tower = "0.5"
async-trait = "0.1.89"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-types = "0.26.0"
jsonrpsee-core = { version = "0.26.0" }

# misc
clap = { version = "4.4.3" }
crossbeam-channel = "0.5.13"
derive_more = { version = "2", default-features = false, features = ["full"] }
dashmap = "6.1"
either = { version = "1.15.0", default-features = false }
eyre = { version = "0.6.12" }
hex = "0.4"
metrics = "0.24.0"
moka = { version = "0.12.11", features = ["sync"] }
criterion = { version = "0.5", features = ["html_reports"] }
once_cell = "1.19"
parking_lot = { version = "0.12.3" }
secp256k1 = { version = "0.30", default-features = false }
serde = "1"
serde_json = "1.0"
serde_with = { version = "3.8.1" }
thiserror = { version = "2.0.18" }
humantime = "2.1"
tracing = { version = "0.1.41" }
shellexpand = "3.1"
url = "2.5"
brotli = "8.0"
ringbuffer = "=0.16.0"

# p2p
libp2p = { version = "0.56", features = ["identify", "ping", "noise", "tcp", "autonat", "mdns", "tokio", "cbor", "macros", "yamux", "dns"] }
libp2p-stream = "0.4.0-alpha"
multiaddr = "0.18"

# ==============================================================================
# Patch Section
# ==============================================================================
[patch."https://github.com/paradigmxyz/reth"]
# Redirect every paradigmxyz/reth dep pulled in by the deps/optimism/rust path
# crates to the same okx/reth rev pinned above, so the workspace resolves to a
# single reth source. Bump together with the rev in [workspace.dependencies].
reth = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-basic-payload-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-chain-state = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-chainspec = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-cli = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-cli-commands = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-cli-runner = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-cli-util = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-consensus = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-consensus-common = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-db = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-db-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-db-common = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-downloaders = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-engine-local = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-engine-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-errors = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-eth-wire = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-eth-wire-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-ethereum-cli = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-ethereum-consensus = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-ethereum-forks = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-ethereum-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-evm = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-evm-ethereum = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-exex = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-execution-errors = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-execution-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-fs-util = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-metrics = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-network = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-network-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-network-peers = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-core = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-ethereum = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-events = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-node-metrics = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-builder-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-primitives = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-util = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-payload-validator = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-provider = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-prune = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-prune-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-revm = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-builder = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-engine-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-eth-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-eth-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-rpc-server-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-stages = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-stages-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-static-file = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-static-file-types = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-storage-api = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-storage-errors = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-tasks = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-tracing = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-transaction-pool = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-trie = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-trie-common = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }
reth-trie-db = { git = "https://github.com/okx/reth", rev = "22bdddf9e0eff2a2444feca9994c5f191829bdcd" }

[patch.crates-io]
# Security patch: remove yamux 0.12.x (CVE-2026-32314) from libp2p-yamux 0.47.0.
# libp2p-yamux 0.47.0 depends on both yamux 0.12.x (legacy) and 0.13.x (default).
# This local fork drops yamux012 and uses only yamux 0.13.x (already patched).
libp2p-yamux = { path = "deps/libp2p-yamux" }

# revmc — paradigmxyz/revmc upstream main, no private patches.
# Branch `xlayer/upstream-only` is reset to origin/main of paradigmxyz/revmc.
revmc          = { path = "../revmc/crates/revmc" }
revmc-runtime  = { path = "../revmc/crates/revmc-runtime" }
revmc-context  = { path = "../revmc/crates/revmc-context" }
